--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -15,7 +15,6 @@ h2 {
     font-size: 3.6rem;
     color: v.$primario;
     
-
     span {
         color: v.$secundario;
         font-size: 1.8rem;
@@ -30,6 +29,17 @@ h2 {
         margin: 0 auto;
         background-image: url(../img/cafe.svg);
         background-size: 10rem;
+    }
+}
+.heading-blanco {
+    @extend h2;
+    color: v.$blanco;
+
+    span {
+        color: v.$blanco;
+    }
+    &::after {
+        display: none;
     }
 }
 h3 {
